# FyLiveBox

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src/apis/: live.ts
src/utils/: http.ts
